@@ -4,6 +4,7 @@
 * Fix type for the `mock`'s patcher object. See #556
 * Add `passthrough` argument to `BaseResponse` object. See #557
 * Fix `registries` leak. See #563
+* Add support for the `loose` version of `json_params_matcher` via named argument `strict_match`. See #551
 
 0.21.0
 ------
